--- a/file3.htm
+++ b/file3.htm
@@ -52,7 +52,7 @@ ul
 
 <p class=MsoNormal><b><span style='color:#0070C0'>Cho hàm số</span><span
 style='color:#0070C0'><span style='position:relative;top:6.0pt'><img width=215
-height=29 src="de2_files/image001.png"></span></span></b><b><span
+height=29 src="file3_files/image001.png"></span></span></b><b><span
 style='color:#0070C0'>. Câu nào đúng?</span></b></p>
 
 <p class=MsoNormal><b><span style='color:#0070C0'>A.</span></b> Hàm số đồng
@@ -73,9 +73,49 @@ style='color:#0070C0'> </span>Hàm số có cực đại và không có cực ti
 line-height:150%;color:red'>Trắc nghiệm</span></b></p>
 
 <p class=MsoNormal><span style='position:relative;top:6.0pt'><img width=487
-height=29 src="de2_files/image002.png"></span></p>
+height=29 src="file3_files/image002.png"></span></p>
 
 <p class=MsoNormal>=&gt; Hàm số đồng biến trên R</p>
+
+<table class=MsoNormalTable border=1 cellspacing=0 cellpadding=0
+ style='margin-left:-.4pt;border-collapse:collapse;border:none'>
+ <tr>
+  <td valign=top style='border:solid windowtext 1.0pt;padding:0in 5.4pt 0in 5.4pt'>
+  <p class=MsoNormal>x</p>
+  </td>
+  <td valign=top style='border:solid windowtext 1.0pt;border-left:none;
+  padding:0in 5.4pt 0in 5.4pt'>
+  <p class=MsoNormal>-<span style='font-family:"Cambria Math",serif'>∞</span>                                           
+  +<span style='font-family:"Cambria Math",serif'>∞</span></p>
+  </td>
+ </tr>
+ <tr>
+  <td valign=top style='border:solid windowtext 1.0pt;border-top:none;
+  padding:0in 5.4pt 0in 5.4pt'>
+  <p class=MsoNormal>y’</p>
+  </td>
+  <td valign=top style='border-top:none;border-left:none;border-bottom:solid windowtext 1.0pt;
+  border-right:solid windowtext 1.0pt;padding:0in 5.4pt 0in 5.4pt'>
+  <p class=MsoNormal>                           +</p>
+  </td>
+ </tr>
+ <tr>
+  <td valign=top style='border:solid windowtext 1.0pt;border-top:none;
+  padding:0in 5.4pt 0in 5.4pt'>
+  <p class=MsoNormal>y</p>
+  </td>
+  <td valign=top style='border-top:none;border-left:none;border-bottom:solid windowtext 1.0pt;
+  border-right:solid windowtext 1.0pt;padding:0in 5.4pt 0in 5.4pt'>
+  <p class=MsoNormal><span style='position:absolute;z-index:251659264;
+  margin-left:6px;margin-top:4px;width:231px;height:49px'><img width=231
+  height=49 src="file3_files/image003.png"></span></p>
+  <p class=MsoNormal>&nbsp;</p>
+  <p class=MsoNormal>&nbsp;</p>
+  </td>
+ </tr>
+</table>
+
+<p class=MsoNormal>&nbsp;</p>
 
 <p class=Default style='text-align:justify;line-height:150%'><b><span
 style='font-size:14.0pt;line-height:150%;color:blue'>Đáp án A</span></b></p>
@@ -85,7 +125,7 @@ style='font-size:14.0pt;line-height:150%;color:blue'>Đáp án A</span></b></p>
 <p class=MsoNormal><b><span style='color:red'>Tự luận</span></b></p>
 
 <p class=MsoNormal>Ta có: <a name=MTBlankEqn><span style='position:relative;
-top:6.0pt'><img width=204 height=29 src="de2_files/image003.png"></span></a></p>
+top:6.0pt'><img width=204 height=29 src="file3_files/image004.png"></span></a></p>
 
 <p class=Default style='text-align:justify;line-height:150%'><span
 style='font-size:14.0pt;line-height:150%;color:windowtext'>Vì a &gt; 0 nên y’
@@ -110,18 +150,18 @@ line-height:150%;color:red'>để hiểu kỷ hơn về bài tập này nh
 
 <p class=MsoNormal style='text-align:justify'><b><span style='color:#0070C0'>Tìm
 a để hàm số </span><span style='color:#0070C0'><span style='position:relative;
-top:14.0pt'><img width=208 height=52 src="de2_files/image004.png"></span></span></b><b><span
+top:14.0pt'><img width=208 height=52 src="file3_files/image005.png"></span></span></b><b><span
 style='color:#0070C0'> đồng biến trên R</span></b></p>
 
 <p class=MsoNormal><b><span style='color:#0070C0'>A.</span></b> <span
 style='position:relative;top:3.0pt'><img width=79 height=20
-src="de2_files/image005.png"></span>        <b><span style='color:#0070C0'>B.</span></b>
+src="file3_files/image006.png"></span>        <b><span style='color:#0070C0'>B.</span></b>
 <span style='position:relative;top:3.0pt'><img width=79 height=20
-src="de2_files/image006.png"></span>        <b><span style='color:#0070C0'>C.</span></b>
+src="file3_files/image007.png"></span>        <b><span style='color:#0070C0'>C.</span></b>
 <span style='position:relative;top:3.0pt'><img width=79 height=20
-src="de2_files/image007.png"></span>        <b><span style='color:#0070C0'>D.</span></b>
+src="file3_files/image008.png"></span>        <b><span style='color:#0070C0'>D.</span></b>
 <span style='position:relative;top:3.0pt'><img width=79 height=20
-src="de2_files/image008.png"></span> </p>
+src="file3_files/image009.png"></span> </p>
 
 <p class=MsoNormal><b><span style='color:red'>--------------------------------------------------------------------------------------------------</span></b></p>
 
@@ -136,12 +176,12 @@ src="de2_files/image008.png"></span> </p>
 <p class=MsoNormal>TXĐ: D = R</p>
 
 <p class=MsoNormal><span style='position:relative;top:6.0pt'><img width=128
-height=29 src="de2_files/image009.png"></span></p>
+height=29 src="file3_files/image010.png"></span></p>
 
 <p class=MsoNormal>Hàm số đồng biến trên R </p>
 
 <p class=MsoNormal><span style='position:relative;top:19.0pt'><img width=596
-height=60 src="de2_files/image010.png"></span></p>
+height=60 src="file3_files/image011.png"></span></p>
 
 <p class=Default style='text-align:justify;line-height:150%'><b><span
 style='font-size:14.0pt;line-height:150%;color:blue'>Đáp án B</span></b></p>
@@ -164,7 +204,7 @@ line-height:150%;color:red'>để hiểu kỷ hơn về bài tập này nh
 năm kể từ năm 1970 được ước tính bởi công thức </span></b></p>
 
 <p class=MsoNormal><b><span style='color:#0070C0'><span style='position:relative;
-top:12.0pt'><img width=101 height=41 src="de2_files/image011.png"></span>(f(t)
+top:12.0pt'><img width=101 height=41 src="file3_files/image012.png"></span>(f(t)
 được tính bằng nghìn người). Vào năm nào thì tốc độ tăng dân số </span></b></p>
 
 <p class=MsoNormal><b><span style='color:#0070C0'>(được biểu thị bằng đạo hàm)
@@ -187,12 +227,12 @@ style='font-size:14.0pt;line-height:150%;color:red'>Trắc nghiệm</span></b>
 <p class=MsoNormal style='margin-left:.5in;text-indent:-.25in'><span
 style='font-family:Wingdings'>Ø<span style='font:7.0pt "Times New Roman"'> </span></span><span
 style='position:relative;top:24.0pt'><img width=161 height=63
-src="de2_files/image012.png"></span> </p>
+src="file3_files/image013.png"></span> </p>
 
 <p class=MsoNormal style='margin-left:.5in;text-indent:-.25in'><span
 style='font-family:Wingdings'>Ø<span style='font:7.0pt "Times New Roman"'> </span></span><span
 style='position:relative;top:24.0pt'><img width=309 height=63
-src="de2_files/image013.png"></span></p>
+src="file3_files/image014.png"></span></p>
 
 <p class=MsoNormal style='margin-left:.5in;text-indent:-.25in'><span
 style='font-family:Wingdings'>Ø<span style='font:7.0pt "Times New Roman"'> </span></span>Vậy
@@ -219,7 +259,7 @@ line-height:150%;color:red'>để hiểu kỷ hơn về bài tập này nh
 
 <p class=MsoNormal><b><span style='color:#002060'>Cho hàm số </span><span
 style='color:#002060'><span style='position:relative;top:14.0pt'><img
-width=169 height=49 src="de2_files/image014.png"></span></span></b><b><span
+width=169 height=49 src="file3_files/image015.png"></span></span></b><b><span
 style='color:#002060'>. Câu nào đúng ?</span></b></p>
 
 <p class=MsoNormal><b><span lang=FR style='color:#0070C0'>A.</span></b><span
